--- a/plugins/synaptics-rmi/meson.build
+++ b/plugins/synaptics-rmi/meson.build
@@ -1,11 +1,7 @@
-if get_option('plugin_synaptics_rmi')
-if not gnutls.found()
-  error('gnutls is needed for plugin_synaptics_rmi')
-endif
-if not gudev.found()
-  error('gudev is required for plugin_synaptics_rmi')
-endif
-
+if get_option('plugin_synaptics_rmi').require(gnutls.found(),
+    error_message: 'gnutls is needed for plugin_synaptics_rmi').allowed() and \
+   get_option('plugin_synaptics_rmi').require(gudev.found(),
+    error_message: 'gudev is needed for plugin_synaptics_rmi').allowed()
 cargs = ['-DG_LOG_DOMAIN="FuPluginSynapticsRmi"']
 
 install_data(['synaptics-rmi.quirk'],
