--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -251,24 +251,24 @@ fwupd wrapper for Qubes OS
 %else
     -Dplugin_msr=disabled \
 %endif
-    -Dplugin_thunderbolt=true \
+    -Dplugin_thunderbolt=enabled \
 %if 0%{?have_uefi}
     -Dplugin_uefi_capsule=enabled \
-    -Dplugin_uefi_pk=true \
+    -Dplugin_uefi_pk=enabled \
     -Dplugin_tpm=enabled \
-    -Dplugin_gpio=true \
+    -Dplugin_gpio=enabled \
     -Defi_binary=false \
 %else
     -Dplugin_uefi_capsule=disabled \
-    -Dplugin_uefi_pk=false \
+    -Dplugin_uefi_pk=disabled \
     -Dplugin_tpm=disabled \
 %endif
 %if 0%{?have_dell}
     -Dplugin_dell=enabled \
-    -Dplugin_synaptics_mst=true \
+    -Dplugin_synaptics_mst=enabled \
 %else
     -Dplugin_dell=disabled \
-    -Dplugin_synaptics_mst=false \
+    -Dplugin_synaptics_mst=disabled \
 %endif
 %if 0%{?have_modem_manager}
     -Dplugin_modem_manager=enabled \
@@ -279,8 +279,8 @@ fwupd wrapper for Qubes OS
     -Dqubes=true \
 %endif
     -Dman=true \
-    -Dbluez=true \
-    -Dplugin_powerd=false \
+    -Dbluez=enabled \
+    -Dplugin_powerd=disabled \
     -Dsupported_build=true
 
 %meson_build
@@ -419,6 +419,7 @@ done
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_analogix.so
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_ata.so
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_bcm57xx.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_cfu.so
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_ccgx.so
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_colorhug.so
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_cros_ec.so
