--- a/plugins/bcm57xx/meson.build
+++ b/plugins/bcm57xx/meson.build
@@ -1,9 +1,5 @@
-if get_option('plugin_bcm57xx')
-# TODO when upgrading to meson 0.59 as baseline use require()
-if not gudev.found()
-  error('gudev is required for plugin_bcm57xx')
-endif
-
+if get_option('plugin_bcm57xx').require(gudev.found(),
+    error_message: 'gudev is needed for plugin_bcm57xx').allowed()
 cargs = ['-DG_LOG_DOMAIN="FuPluginBcm57xx"']
 
 install_data(['bcm57xx.quirk'],
