--- a/plugins/emmc/meson.build
+++ b/plugins/emmc/meson.build
@@ -1,8 +1,5 @@
-if get_option('plugin_emmc')
-# TODO when upgrading to meson 0.59 as baseline use require()
-if not gudev.found()
-  error('gudev is required for plugin_emmc')
-endif
+if get_option('plugin_emmc').require(gudev.found(),
+    error_message: 'gudev is needed for plugin_emmc').allowed()
 
 cargs = ['-DG_LOG_DOMAIN="FuPluginEmmc"']
 
