--- a/plugins/realtek-mst/meson.build
+++ b/plugins/realtek-mst/meson.build
@@ -1,8 +1,5 @@
-if get_option('plugin_realtek_mst')
-# TODO when upgrading to meson 0.59 as baseline use require()
-if not gudev.found()
-  error('gudev is required for plugin_realtek_mst')
-endif
+if get_option('plugin_realtek_mst').require(gudev.found(),
+    error_message: 'gudev is needed for plugin_realtek_mst').allowed()
 cargs = ['-DG_LOG_DOMAIN="FuPluginRealtekMst"']
 
 install_data(['realtek-mst.quirk'],
