--- a/plugins/thunderbolt/meson.build
+++ b/plugins/thunderbolt/meson.build
@@ -1,9 +1,5 @@
-if get_option('plugin_thunderbolt')
-# TODO when upgrading to meson 0.59 as baseline use require()
-if not gudev.found()
-  error('gudev is required for plugin_thunderbolt')
-endif
-
+if get_option('plugin_thunderbolt').require(gudev.found(),
+    error_message: 'gudev is needed for plugin_thunderbolt').allowed()
 cargs = ['-DG_LOG_DOMAIN="FuPluginThunderbolt"']
 install_data([
   'thunderbolt.quirk',
