--- a/plugins/tpm/meson.build
+++ b/plugins/tpm/meson.build
@@ -1,6 +1,9 @@
 tpm2tss_tpm = dependency('tss2-esys', version : '>= 2.0', required: get_option('plugin_tpm'))
 
-if get_option('hsi') and gudev.found() and tpm2tss_tpm.found()
+if get_option('hsi') and \
+   tpm2tss_tpm.found() and \
+   get_option('plugin_tpm').require(gudev.found(),
+    error_message: 'gudev is needed for plugin_tpm').allowed()
 cargs = ['-DG_LOG_DOMAIN="FuPluginTpm"']
 
 install_data([
