Set supported_build as a meson tristate feature
This (should) cause the snap to automatically be marked as a supported build on
releases.  Packagers can and should set continue to set supported_build explicitly
in packaging.

--- a/contrib/PKGBUILD
+++ b/contrib/PKGBUILD
@@ -32,7 +32,7 @@ build() {
         -Dplugin_powerd=disabled \
         -Ddocs=gtkdoc \
         -Defi_binary=false \
-        -Dsupported_build=true
+        -Dsupported_build=enabled
 
     ninja -v -C ../build
 }
