--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -49,7 +49,7 @@ ifeq (yes,$(shell dpkg-vendor --derives-from Ubuntu && echo yes))
        CONFARGS += -Dplugin_logitech_bulkcontroller=disabled
 endif
 
-CONFARGS += -Dplugin_dummy=true -Dplugin_powerd=disabled -Ddocs=gtkdoc -Dsupported_build=true -Dplugin_modem_manager=enabled
+CONFARGS += -Dplugin_dummy=true -Dplugin_powerd=disabled -Ddocs=gtkdoc -Dsupported_build=enabled -Dplugin_modem_manager=enabled
 
 %:
 	dh $@ --with gir
